@@ -17,5 +17,6 @@ nytprof.out
 /pm_to_blib
 *.o
 *.bs
+t/online.enabled
 /_eumm/
 .*.swp
