@@ -1,6 +1,25 @@
+#!/usr/bin/env perl
+
 use strict;
 use warnings;
+use Getopt::Long;	# Technique inspired by IO::Lambda
 use ExtUtils::MakeMaker;
+use IO::Socket::INET;
+
+my $online_tests;
+
+Getopt::Long::GetOptions('online-tests!' => \$online_tests);
+
+if(!defined($online_tests)) {
+	$online_tests = are_online();
+}
+
+if($online_tests) {
+	open(my $enabled, '>', 't/online.enabled') || die "Can't touch t/online.enabled $!";
+	close($enabled) || die "Can't touch t/online.enabled $!";
+} else {
+	unlink('t/online.enabled');
+}
 
 WriteMakefile(
     NAME		=> 'WWW::Scrape::FindaGrave',
@@ -37,3 +56,42 @@ WriteMakefile(
     },
     MIN_PERL_VERSION	=> '5.6.2'	# Probably would work, but never tested on earlier versions than this
 );
+
+sub are_online
+{
+	my $s = IO::Socket::INET->new(
+		# PeerAddr => 'www.ripe.net:43',
+		# PeerAddr => 'whois.apnic.net:43',
+		PeerAddr => 'www.findagrave.com:80',
+		Timeout => 5
+	);
+	if($s) {
+		if($ENV{AUTOMATED_TESTING}) {
+			return 1;
+		}
+
+		print <<EOF;
+
+You appear to be directly connected to the Internet.  I have some tests
+that connect to www.findagrave.com.
+
+EOF
+		close($s);
+
+		# Timeout inspired by Mail::IMAPClient
+		my $rc;
+		eval {
+			local $SIG{ALRM} = sub { die "alarm\n" };
+			alarm(60);
+			$rc = prompt('Do you want to enable these tests?', 'y') =~ /^y/i ? 1 : 0;
+			alarm(0);
+		};
+		if($@) {
+			print "\n";
+			return 0;
+		}
+		return $rc;
+	}
+	print "On-line tests disabled because I couldn't detect an Internet connexion\n";
+	return 0;
+}
